FK-75 fix dispay link on mobile

--- a/web/themes/custom/fds_green_theme/src/styles/theme/paragraph/paragraph--type--os2web-menu-links-paragraph/paragraph--type--os2web-menu-links-paragraph-content.scss
+++ b/web/themes/custom/fds_green_theme/src/styles/theme/paragraph/paragraph--type--os2web-menu-links-paragraph/paragraph--type--os2web-menu-links-paragraph-content.scss
@@ -29,7 +29,7 @@
       padding: 30px 48px;
       @include media-breakpoint-only(xs) {
         padding: 0;
-        display: none;
+        display: flex;
     }
      a {
        color: initial;
